# algorithmic_trading_practice_project

./: .env.example  README.md  REPORT.md  algorithmic_trading_report.ipynb  colab_env_setup.py  colab_notebook_cell.py  collect_sol_data.py  config.py  main.py  mercado_bitcoin_python-0.2.7-py3-none-any.whl  mercado_bitcoin_python-0.2.8-py3-none-any.whl  pyproject.toml  simple_trading_exercise.py  telegram_service.py
data/: trading.db
data/cache/SOL-BRL/5m/: SOL-BRL_5m_2025_08.csv
data/exercise/: model.pkl  sol_data.db
